Spacing issue in header amended

--- a/_includes/css/header.css
+++ b/_includes/css/header.css
@@ -60,7 +60,7 @@ header {
 	background: #7AD0D7 url("{{site.baseurl}}/images/banner.jpg") no-repeat center center;
 	background-size: cover;
 	text-align: center;
-	padding: 5rem 1rem 1rem;
+	padding: 3rem 1rem 1rem;
 }
 
 .banner h2{
